force-app/main/default/objects/Study_Session__c/Study_Session__c.object-meta.xml
<CustomObject>
    <description>The variation of sessions of a study offering such as tutorial, lecture, workshop and etc.</description>
    <label>Study Session</label>
    <nameField>
        <label>Study Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>