force-app/main/default/objects/Study_Session__c/fields/Background_Colour__c.field-meta.xml
<CustomField>
    <fullName>Background_Colour__c</fullName>
    <description>Background hex colour of events in the calendar view (e.g. #FFFFFF)</description>
    <inlineHelpText>Background hex colour of events in the calendar view (e.g. #FFFFFF)</inlineHelpText>
    <label>Background Colour</label>
    <length>7</length>
    <type>Text</type>
</CustomField>