force-app/main/default/objects/Study_Session__c/fields/Enable_Self_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Self_Enrollment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow students to enroll to the study session.</description>
    <inlineHelpText>Allow students to enroll to the study session.</inlineHelpText>
    <label>Enable Self Enrollment</label>
    <type>Checkbox</type>
</CustomField>