force-app/main/default/objects/Study_Session__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The latest end date defined in the study session time.</description>
    <inlineHelpText>The latest end date defined in the study session time.</inlineHelpText>
    <label>End Date (Override)</label>
    <type>Date</type>
</CustomField>