force-app/main/default/objects/Study_Session__c/fields/End_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Calculated__c</fullName>
    <description>Calculated end date. Only consider the dates in study offering if both start/end date in study session are empty.</description>
    <formula>IF( NOT(ISNULL( End_Date__c)) || NOT(ISNULL ( Start_Date__c)),
	End_Date__c,
	IF(
		ISNULL( Study_Offering__r.End_Date_Calculated__c) &amp;&amp; NOT(ISNULL( Study_Offering__r.Start_Date_Calculated__c)),
		null,
		Study_Offering__r.End_Date_Calculated__c
	)
)</formula>
    <inlineHelpText>Calculated end date. Only consider the dates in study offering if both start/end date in study session are empty.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>