force-app/main/default/objects/Study_Session__c/fields/Enrollment_Open_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Open_Date_Calculated__c</fullName>
    <description>Calculated enrollment open date for status field. Only consider the dates in term if both enrollment start/end date in study offering are empty.</description>
    <formula>IF( ISNULL( Enrollment_Open_Date__c ) &amp;&amp; ISNULL(Enrollment_Close_Date__c) , Study_Offering__r.Enrollment_Open_Date_Calculated__c , Enrollment_Open_Date__c )</formula>
    <inlineHelpText>Calculated enrollment open date for status field. Only consider the dates in term if both enrollment start/end date in study offering are empty.</inlineHelpText>
    <label>Enrollment Open Date</label>
    <type>DateTime</type>
</CustomField>