force-app/main/default/objects/Study_Session__c/fields/Pre_enrollment_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_enrollment_Open_Date__c</fullName>
    <label>Pre-enrollment Open Date (Override)</label>
    <type>DateTime</type>
</CustomField>