force-app/main/default/objects/Study_Session__c/fields/Required_Attendance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Required_Attendance_Percentage__c</fullName>
    <description>Attendance requirement percentage. Leave blank or 0 for optional attendance.</description>
    <inlineHelpText>Attendance requirement percentage. Leave blank or 0 for optional attendance.</inlineHelpText>
    <label>Required Attendance %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>