force-app/main/default/objects/Study_Session__c/fields/Required_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Required_Facility_Type__c</fullName>
    <label>Required Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facility_Type</valueSetName>
    </valueSet>
</CustomField>