force-app/main/default/objects/Study_Session__c/fields/Respect_Resource_Availability__c.field-meta.xml
<CustomField>
    <fullName>Respect_Resource_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To auto allocate the facility/faculty contact to the study events based on their availabilities.</description>
    <inlineHelpText>To auto allocate the facility/faculty contact to the study events based on their availabilities.</inlineHelpText>
    <label>Respect Resource Availability</label>
    <type>Checkbox</type>
</CustomField>