force-app/main/default/objects/Study_Session__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The earliest start date defined in the study session time.</description>
    <inlineHelpText>The earliest start date defined in the study session time.</inlineHelpText>
    <label>Start Date (Override)</label>
    <type>Date</type>
</CustomField>