force-app/main/default/objects/Study_Session__c/fields/Start_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Calculated__c</fullName>
    <description>Calculated start date. Only consider the dates in study offering if both start and end date in study session is empty.</description>
    <formula>IF(
	ISNULL(Start_Date__c) &amp;&amp; ISNULL(End_Date__c),
	Study_Offering__r.Start_Date_Calculated__c,
	Start_Date__c 
)</formula>
    <inlineHelpText>Calculated start date. Only consider the dates in study offering if both start and end date in study session is empty.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>