force-app/main/default/objects/Study_Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status based on date fields in study session and study offering.</description>
    <formula>IF( ISBLANK( TEXT( Status_Override__c ) ),
	IF( TODAY() &gt; End_Date__c,
		&apos;Completed&apos;,
		IF( TODAY() &gt;=  Start_Date__c,
			IF( NOW() &gt;=  Enrollment_Open_Date_Calculated__c &amp;&amp; (ISNULL( Enrollment_Close_Date_Calculated__c) || NOW() &lt;=  Enrollment_Close_Date_Calculated__c),
				&apos;Running (Enrollment Opened)&apos;,
				&apos;Running&apos;
			),
			IF( NOW() &gt;  Enrollment_Close_Date_Calculated__c,
				&apos;Enrollment Closed&apos;,
				IF( NOW() &gt;=  Enrollment_Open_Date_Calculated__c,
					&apos;Enrollment Opened&apos;,
					IF( NOT(ISNULL( Pre_enrollment_Open_Date_Calculated__c)) &amp;&amp; NOW() &gt;=  Pre_enrollment_Open_Date_Calculated__c,
						&apos;Pre-enrollment Opened&apos;,
						&apos;Not Started&apos;
					)
				)
			)
		)
	),
	TEXT(  Status_Override__c )
)</formula>
    <inlineHelpText>Status based on date fields in study session and study offering.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>