force-app/main/default/objects/Study_Session__c/fields/Study_Event_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Event_Generation_Status__c</fullName>
    <description>Indicates the generation status of related study events.</description>
    <inlineHelpText>Indicates the generation status of related study events.</inlineHelpText>
    <label>Study Event Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>