force-app/main/default/objects/Study_Session__c/fields/Study_Offering__c.field-meta.xml
<CustomField>
    <fullName>Study_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Offering</label>
    <referenceTo>Study_Offering__c</referenceTo>
    <relationshipLabel>Study Sessions</relationshipLabel>
    <relationshipName>Study_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>