force-app/main/default/objects/Study_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Capacity__c</columns>
    <columns>Available_Places__c</columns>
    <columns>Start_Date_Calculated__c</columns>
    <columns>End_Date_Calculated__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>