force-app/main/default/objects/Study_Session__c/listViews/This_Years_Study_Sessions.listView-meta.xml
<ListView>
    <fullName>This_Years_Study_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Capacity__c</columns>
    <columns>Available_Places__c</columns>
    <columns>Start_Date_Calculated__c</columns>
    <columns>End_Date_Calculated__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date_Calculated__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year&apos;s Study Sessions</label>
</ListView>